@@ -43,8 +43,15 @@ val HelidonClientWebSocket = "io.helidon.webclient" % "helidon-webclient-websock
 val HelidonClient          = "io.helidon.webclient" % "helidon-webclient-http2"          % HelidonVersion
 val HelidonServerLogging   = "io.helidon.logging"   % "helidon-logging-jul"              % HelidonVersion
 
-val LogBack        = "ch.qos.logback" % "logback-classic" % "1.4.14"
-val Slf4jApi       = "org.slf4j"      % "slf4j-api"       % "2.0.9"
+val LogBack  = "ch.qos.logback" % "logback-classic" % "1.4.14"
+val Slf4jApi = "org.slf4j"      % "slf4j-api"       % "2.0.9"
+
+val SparkSql = ("org.apache.spark" %% "spark-sql" % "3.5.0" % "provided").cross(CrossVersion.for3Use2_13).exclude("org.scala-lang.modules", "scala-xml_2.13")
+val SparkScala3Fix = Seq(
+  "io.github.vincenzobaz" %% "spark-scala3-encoders" % "0.2.5",
+  "io.github.vincenzobaz" %% "spark-scala3-udf"      % "0.2.5"
+).map(_.exclude("org.scala-lang.modules", "scala-xml_2.13"))
+
 // -----------------------------------------------------------------------------------------------
 // Modules
 // -----------------------------------------------------------------------------------------------
@@ -138,3 +145,15 @@ lazy val examples = project
     libraryDependencies ++= Seq(ScalaTest, LogBack)
   )
   .dependsOn(`terminal21-ui-std`)
+
+lazy val `terminal21-spark` = project
+  .settings(
+    commonSettings,
+    Test / fork := true,
+    Test / javaOptions ++= Seq("--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED"),
+    libraryDependencies ++= Seq(
+      ScalaTest,
+      SparkSql,
+      LogBack % Test
+    ) ++ SparkScala3Fix
+  )
